# hotl

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  nix-tag.yml  publish.yml  update-flake-lock.yml
crates/: INTERNAL.md
crates/hotl/: Cargo.toml  README.md
crates/hotl-context/: Cargo.toml
crates/hotl-context/src/: compaction.rs  lib.rs  tokens.rs
crates/hotl-engine/: Cargo.toml  LICENSE
crates/hotl-engine/src/: actor.rs  hooks.rs  lib.rs  turn.rs
crates/hotl-engine/tests/: ask_user.rs  hooks_notification.rs  hooks_stop.rs  hooks_user_prompt.rs  interrupt.rs  plan_mode.rs  recall.rs  rename.rs  set_mode.rs  speculation.rs  todo_gate.rs  todos.rs  tool_pairing.rs
crates/hotl-listener/: Cargo.toml
crates/hotl-listener/src/: lib.rs
crates/hotl-mcp/: Cargo.toml
crates/hotl-mcp/src/: client.rs  config.rs  lib.rs  sanitize.rs  tool.rs  trust.rs
crates/hotl-mcp/tests/: scripted_server.rs
crates/hotl-platform/: Cargo.toml
crates/hotl-platform/src/: lib.rs
crates/hotl-provider/: Cargo.toml
crates/hotl-provider-anthropic/: Cargo.toml
crates/hotl-provider-anthropic/src/: lib.rs  sse.rs
crates/hotl-provider-openai/: Cargo.toml
crates/hotl-provider-openai/src/: lib.rs  responses.rs
crates/hotl-provider/src/: api_error.rs  key.rs  lib.rs
crates/hotl-retrieval/: Cargo.toml
crates/hotl-retrieval/src/: config.rs  lib.rs  mcp.rs  sanitize.rs  testing.rs  tool.rs
crates/hotl-store/: Cargo.toml
crates/hotl-store/src/: lib.rs  retention.rs  shadow.rs
crates/hotl-testkit/: Cargo.toml
crates/hotl-testkit/src/: lib.rs
crates/hotl-theme/: Cargo.toml
crates/hotl-theme/src/: lib.rs
crates/hotl-tmux/: Cargo.toml
crates/hotl-tmux/src/: lib.rs  nav.rs  panes.rs  procs.rs  status.rs  surface.rs
crates/hotl-tools/: Cargo.toml
crates/hotl-tools/src/: agents.rs  ask.rs  builtins.rs  concurrency.rs  diagnostics.rs  lib.rs  matcher.rs  net.rs  rules.rs  sandbox.rs  skills.rs  todo.rs  web.rs
crates/hotl-tools/tests/: web_egress.rs  web_redirect_egress.rs
crates/hotl-tui/: Cargo.toml
crates/hotl-tui/src/: anim.rs  app.rs  client.rs  lib.rs  view.rs  vim.rs  wrap.rs
crates/hotl-tui/tests/: ctrl_nav_e2e.rs
crates/hotl-types/: Cargo.toml  LICENSE-MIT
crates/hotl-types/src/: agent.rs  config.rs  lib.rs  nav.rs  observation.rs  surface.rs
crates/hotl-types/tests/: crash_repro.rs
crates/hotl/src/: acp.rs  agent.rs  attach.rs  bg.rs  config.rs  doctor.rs  gc.rs  history.rs  keysource.rs  main.rs  session_server.rs  setup.rs  shell_hooks.rs  skills_cli.rs  spawn.rs  structured.rs  term.rs  tui.rs  watch.rs
crates/hotl/tests/: acp_protocol.rs  tui_e2e.rs  watch_sees_tui_state.rs
crates/watch-listener/: Cargo.toml
crates/watch-listener/src/: lib.rs
crates/watch-tmux/: Cargo.toml
crates/watch-tmux/src/: lib.rs  nav.rs  panes.rs  procs.rs  status.rs  surface.rs
crates/watch-tui/: Cargo.toml
crates/watch-tui/src/: app.rs  view.rs
crates/watch-tui/tests/: ctrl_nav_e2e.rs
crates/watch-types/: Cargo.toml
crates/watch-types/src/: config.rs  lib.rs  nav.rs  observation.rs
crates/watch-types/tests/: crash_repro.rs
docs/: RELIABILITY.md  SECURITY.md
docs/superpowers/specs/: 2026-07-21-starlight-docs-site-design.md
docs/user/: backgrounding.md  configuration.md  gateway.md  hooks.md  index.md  mcp.md  permissions-and-sandbox.md  quickstart.md  troubleshooting.md  tui.md  uninstall.md
scripts/: release.sh
scripts/demo/: hotl.tape  make-recording.sh  setup.sh
site/: astro.config.mjs  package-lock.json  package.json
site/public/: llms.txt
site/src/content/docs/: agents.md  backgrounding.md  configuration.md  gateway.md  hooks.md  index.md  index.mdx  mcp.md  overview.md  permissions-and-sandbox.md  quickstart.md  retrieval.md  shell.md  troubleshooting.md  tui.md  uninstall.md
