[workspace]
resolver = "2"
members = [
    "crates/hotl-types",
    "crates/hotl-tmux",
    "crates/hotl-listener",
    "crates/hotl-tui",
    "crates/hotl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["nrakochy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nrakochy/hotl"
homepage = "https://github.com/nrakochy/hotl"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
