[workspace]
resolver = "2"
members = [
    "crates/watch-types",
    "crates/watch-tmux",
    "crates/watch-listener",
    "crates/watch-tui",
    "crates/hotl",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
authors = ["nrakochy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nrakochy/hotl"
homepage = "https://github.com/nrakochy/hotl"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# dist builds releases with the release profile plus thin LTO.
[profile.dist]
inherits = "release"
lto = "thin"
