[workspace]
resolver = "2"
members = [
    "crates/watch-types",
    "crates/watch-tmux",
    "crates/watch-listener",
    "crates/watch-tui",
    "crates/hotl-types",
    "crates/hotl-platform",
    "crates/hotl-provider",
    "crates/hotl-provider-anthropic",
    "crates/hotl-provider-openai",
    "crates/hotl-tools",
    "crates/hotl-mcp",
    "crates/hotl-store",
    "crates/hotl-context",
    "crates/hotl-tui",
    "crates/hotl-engine",
    "crates/hotl-testkit",
    "crates/hotl",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.82"
authors = ["nrakochy"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nrakochy/hotl"
homepage = "https://github.com/nrakochy/hotl"

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Harness deps (execute capability). Why: tokio is the one async runtime the
# ecosystem is shaped around (rust-specs); reqwest/rustls avoids openssl.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "io-std", "signal", "time", "fs", "sync"] }
tokio-util = "0.7"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
thiserror = "2"
anyhow = "1"
ulid = "1"
tempfile = "3"
async-stream = "0.3"
jsonschema = { version = "0.26", default-features = false }
libc = "0.2"
sha2 = "0.10"

[profile.release]
strip = true

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

# dist builds releases with the release profile plus thin LTO.
[profile.dist]
inherits = "release"
lto = "thin"
