[package]
name = "hotl-engine"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. L3 turn engine, M0 slice: sample→tools loop, max_turns, cancellation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
hotl-types = { path = "../hotl-types", version = "0.1.2" }
hotl-platform = { path = "../hotl-platform", version = "0.1.2" }
hotl-provider = { path = "../hotl-provider", version = "0.1.2" }
hotl-tools = { path = "../hotl-tools", version = "0.1.2" }
hotl-store = { path = "../hotl-store", version = "0.1.2" }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
