[package]
name = "hotl-engine"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. L3 turn engine, M0 slice: sample→tools loop, max_turns, cancellation."
readme = "../INTERNAL.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
hotl-types = { path = "../hotl-types", version = "0.3.0" }
hotl-platform = { path = "../hotl-platform", version = "0.3.0" }
hotl-provider = { path = "../hotl-provider", version = "0.3.0" }
hotl-context = { path = "../hotl-context", version = "0.3.0" }
hotl-tools = { path = "../hotl-tools", version = "0.3.0" }
hotl-store = { path = "../hotl-store", version = "0.3.0" }
serde_json = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# test-util: paused-clock tests measure summarize/sample overlap deterministically.
tokio = { workspace = true, features = ["test-util"] }
