[package]
name = "hotl-retrieval"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. Retrieval seam: Retriever trait, recall tool, MCP backend adapter, sanitizer chokepoint."
readme = "../INTERNAL.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
hotl-tools = { path = "../hotl-tools", version = "0.4.1" }
hotl-mcp = { path = "../hotl-mcp", version = "0.4.1" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
