[package]
name = "hotl-store"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. L5 persistence: append-only JSONL session log with ingestion-time secret masking."
readme = "../INTERNAL.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
hotl-types = { path = "../hotl-types", version = "0.1.2" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
