[package]
name = "hotl-theme"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. Shared theme model and terminal palette for hotl surfaces."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tui", "theme", "agent"]
categories = ["command-line-utilities"]

[dependencies]
serde = { workspace = true }
ratatui = { workspace = true, optional = true }

[features]
ratatui = ["dep:ratatui"]
