[package]
name = "hotl-tools"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. L4 tool system: read/edit/write/bash built-ins, permission gate seam, protected execute-later paths."
readme = "../INTERNAL.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# Compile-time permission enforcement: with this on, mode=auto cannot exist
# at runtime (Rules::with_mode coerces it to Ask — see rules.rs).
security-enforced = []

[dependencies]
hotl-provider = { path = "../hotl-provider", version = "0.4.0" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tokio-util = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
