[package]
name = "hotl-tui"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. Elm-style ratatui console (state, update, view) for the execute agent. Before 0.2.0 this crate name shipped hotl's watch/dashboard TUI (now hotl-watch-tui)."
readme = "../INTERNAL.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tui", "ratatui", "agent", "console"]
categories = ["command-line-utilities"]

[dependencies]
hotl_theme = { package = "hotl-theme", path = "../hotl-theme", version = "0.5.0", features = ["ratatui"] }
hotl-tools = { path = "../hotl-tools", version = "0.5.0" }
ratatui = { workspace = true }
crossterm = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "sync"] }
unicode-width = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["io-util", "macros", "rt"] }
