[package]
name = "hotl"
description = "A terminal dashboard that discovers AI-agent processes in tmux, shows their live status, and jumps focus to them."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["tmux", "tui", "agent", "dashboard", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "hotl"
path = "src/main.rs"

[features]
# Forwarded compile-time permission enforcement: per-action asks cannot be
# disabled by any config in a binary built with this.
security-enforced = ["hotl-tools/security-enforced"]

[dependencies]
hotl_theme = { package = "hotl-theme", path = "../hotl-theme", version = "0.1.2", features = ["ratatui"] }
watch_types = { package = "hotl-watch-types", path = "../watch-types", version = "0.1.0" }
watch_tmux = { package = "hotl-watch-tmux", path = "../watch-tmux", version = "0.1.0" }
watch_listener = { package = "hotl-watch-listener", path = "../watch-listener", version = "0.1.0" }
watch_tui = { package = "hotl-watch-tui", path = "../watch-tui", version = "0.1.0" }
ratatui = { workspace = true }
crossterm = { workspace = true }
hotl-types = { path = "../hotl-types", version = "0.1.2" }
hotl-platform = { path = "../hotl-platform", version = "0.1.2" }
hotl-provider = { path = "../hotl-provider", version = "0.1.2" }
hotl-provider-anthropic = { path = "../hotl-provider-anthropic", version = "0.1.2" }
hotl-provider-openai = { path = "../hotl-provider-openai", version = "0.1.2" }
hotl-tools = { path = "../hotl-tools", version = "0.1.2" }
hotl-mcp = { path = "../hotl-mcp", version = "0.1.2" }
hotl-store = { path = "../hotl-store", version = "0.1.2" }
hotl-context = { path = "../hotl-context", version = "0.1.2" }
hotl-engine = { path = "../hotl-engine", version = "0.1.2" }
hotl-tui = { path = "../hotl-tui", version = "0.1.2" }
serde = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
