[package]
name = "hotl-watch-listener"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. Aggregates agent observations across surfaces for hotl."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tmux", "agent", "dashboard"]
categories = ["command-line-utilities"]

[lib]
name = "watch_listener"
path = "src/lib.rs"

[dependencies]
watch_types = { package = "hotl-watch-types", path = "../watch-types", version = "0.1.0" }
