[package]
name = "hotl-watch-tmux"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. tmux/ps shims and agent status detection for hotl."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tmux", "agent", "dashboard"]
categories = ["command-line-utilities"]

[lib]
name = "watch_tmux"
path = "src/lib.rs"

[dependencies]
watch_types = { package = "hotl-watch-types", path = "../watch-types", version = "0.1.0" }
