[package]
name = "hotl-watch-tui"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. Elm-style ratatui TUI (state, update, view) for hotl."
readme = "../INTERNAL.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tui", "ratatui", "agent", "dashboard"]
categories = ["command-line-utilities"]

[lib]
name = "watch_tui"
path = "src/lib.rs"

[dependencies]
hotl_theme = { package = "hotl-theme", path = "../hotl-theme", version = "0.5.1", features = ["ratatui"] }
watch_types = { package = "hotl-watch-types", path = "../watch-types", version = "0.5.1" }
ratatui = { workspace = true }
crossterm = { workspace = true }
