[package]
name = "hotl-watch-types"
description = "Internal component of hotl - no semver promise; pin exact or don't depend. Core config, observation model, and surface trait for hotl."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["tmux", "agent", "dashboard"]
categories = ["command-line-utilities"]

[lib]
name = "watch_types"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
